--- a/src/app/pages/test-modal/test-modal.page.html
+++ b/src/app/pages/test-modal/test-modal.page.html
@@ -17,6 +17,5 @@
 </ion-header>
 
 <ion-content>
-  <!-- <ion-router-outlet name="subviews"></ion-router-outlet> -->
-  <ion-nav #mySubNav [root]="rootPage"></ion-nav>
+  <ion-router-outlet name="subviews"></ion-router-outlet>
 </ion-content>
